tests/algorithms/x/C/greedy_methods/fractional_cover_problem.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>


size_t append_len;
static char* str_float(double v) {
    char buf[64];
    snprintf(buf, sizeof(buf), "%f", v);
    char *p = buf + strlen(buf) - 1;
    while (p > buf && *p == '0') *p-- = '\0';
    if (p > buf && *p == '.') *p = '\0';
    return strdup(buf);
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Item Item;

struct Item {
    long long weight;
    long long value;
};

Item items1_init[3] = {(Item){.weight = 10LL, .value = 60LL}, (Item){.weight = 20LL, .value = 100LL}, (Item){.weight = 30LL, .value = 120LL}};
Item *items1 = items1_init;
size_t items1_len = 3;
Item items2_init[3] = {(Item){.weight = 20LL, .value = 100LL}, (Item){.weight = 30LL, .value = 120LL}, (Item){.weight = 10LL, .value = 60LL}};
Item *items2 = items2_init;
size_t items2_len = 3;
Item *items3 = NULL;
size_t items3_len = 0;
Item items4_init[1] = {(Item){.weight = 10LL, .value = 60LL}};
Item *items4 = items4_init;
size_t items4_len = 1;

double ratio(Item item);
double fractional_cover(Item * items, size_t items_len, long long capacity);
int main(void);

double ratio(Item item) {
    return (double)(item.value) / (double)(item.weight);
}

double fractional_cover(Item * items, size_t items_len, long long capacity) {
    if (capacity < 0LL) {
        panic("Capacity cannot be negative");
    }
    double total = 0LL;
    long long remaining = capacity;
    long long sorted = 0;
    long long idx = 0LL;
    while ((idx < sorted_len) && (remaining > 0LL)) {
        long long item = sorted[(int)({long long _mochi_idx = idx; _mochi_idx < 0 ? sorted_len + _mochi_idx : _mochi_idx;})];
        long long take;
        if (item.weight < remaining) {
            take = item.weight;
        } else {
            take = remaining;
        }
        total = total + ((double)(take) * ratio(item));
        remaining = remaining - take;
        idx = idx + 1LL;
    }
    return total;
}

int main(void) {
    {
        long long __start = _now();
        puts(str_float(fractional_cover(items1, items1_len, 50LL)));
        puts(str_float(fractional_cover(items2, items2_len, 25LL)));
        puts(str_float(fractional_cover(items3, items3_len, 50LL)));
        puts(str_float(fractional_cover(items4, items4_len, 5LL)));
        puts(str_float(fractional_cover(items4, items4_len, 1LL)));
        puts(str_float(fractional_cover(items4, items4_len, 0LL)));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
